# jakomics

./: .gitignore  LICENSE  MAG_renamer.py  MAG_to_amplicon.py  README.md  contamination_filter.py  get_dada2_ASV_names.py  pyproject.toml  read_table_tpm.py  setup.py
jakomics/: __init__.py  annotations.py  bbtools.py  blast.py  colors.py  fastq.py  file.py  gene.py  genome.py  hmm.py  image.py  kegg.py  patric.py  table.py  taxa.py  utilities.py
jakomics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jakomics/fastq/: dual_index_demultiplex.py  fastq_index_info.py
jakomics/genomes/: MAG_renamer.py  MAG_to_amplicon.py
jakomics/text/: subset_table.py
jakomics/utilities/: hmm.py
mag_tools/: patric_download.py  patric_submission.py
utilities/: bbtools.py  colors.py  fastq_run_info.py  hmm.py  prodigal_dir.py
