[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakomics"
dynamic = ["version"]
authors = [
    {name = "Jeff Kimbrel", email = "jakpot@gmail.com"}
]
description = "Various omics tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "natsort",
    "pandas",
    "biopython",
    "tqdm",
    "PyYAML",
    "openpyxl"
]

[tool.setuptools.dynamic]
version = {attr = "jakomics.__version__"}

[project.urls]
Homepage = "https://github.com/jeffkimbrel/jakomics"
Repository = "https://github.com/jeffkimbrel/jakomics"
